css issues on mobile resolved

--- a/mad-libs/src/App.css
+++ b/mad-libs/src/App.css
@@ -59,7 +59,7 @@
 #formFields {
   display: flex;
   justify-content: space-evenly;
-  width: 450px;
+  /* width: 450px; */
 }
 
 .textField {
